commit after sidebar alignment fix

--- a/src/pages/reports/cashbook/cashbook.css
+++ b/src/pages/reports/cashbook/cashbook.css
@@ -20,15 +20,6 @@
     background-color:black;
 }
 
-
-.reports-btn{
-    border-radius: 0.3125rem;
-    border: 1px solid #CCC;
-    background: #4B4B4B;
-    height: 2rem;
-    width: 9.625rem;
-}
-
 .cashbook-input{
     width: 16.0625rem;
     height: 2rem;
